--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^6.3.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-responsive-masonry": "^2.1.7",
