--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "PORT=3000 react-app-rewired start",
     "build": "react-app-rewired build",
